--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas~=1.4.2
-numpy~=1.22.4
+numpy~=1.21.2
 nltk~=3.7
+werkzeug~=2.1.2
+flask~=2.1.2
 tqdm~=4.64.0
-sklearn~=0.0
-scikit-learn~=1.1.1
-Flask~=2.1.2
+scikit-learn~=1.0.2
